--- a/product-manager.html
+++ b/product-manager.html
@@ -40,6 +40,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://kiperformance.join.com/jobs/255077-product-owner'>Job @ KI Group (Cologne): Product Owner | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-25</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/adhocteam/jobs/4363558002'>Job Application for Senior Product Manager (Baltimore) at Ad Hoc</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
@@ -118,7 +122,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://caseking.recruitee.com/o/senior-product-designer-mwd-berlin'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://caseking.recruitee.com/o/senior-product-designer-mwd-berlin'>
       Senior Product Designer (m/w/d) - Caseking GmbH
     </a></h5> 
 <p><span class="badge badge-light">Berlin</span></p>
@@ -206,7 +210,7 @@
 <p><span class="badge badge-light">Menlo Park, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='http://itech.applytojob.com/apply/LqfFXEBsl2/Product-Owner-Digital'>Product Owner - Digital - iTech Media - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://itech.applytojob.com/apply/LqfFXEBsl2/Product-Owner-Digital'>Product Owner - Digital - iTech Media - Career Page</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -240,6 +244,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
+<h5><a href='https://winnow.workable.com/j/6466BEAD71?viewed=true'>Product Owner - Apply online - Winnow - Jobs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>5 days ago ... You will have experience working as a Product Owner for a technology company 
+delivering SaaS solutions, or you might be working in a Business Analyst or?...</p>
+<hr/>
 <h5><a href='http://jobs.jobvite.com/progress/job/o65nafws'>Progress Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
@@ -268,7 +277,7 @@
 <p><span class="badge badge-light">San Mateo, CA</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://eygbl.referrals.selectminds.com/jobs/technology-and-digital-platforms-product-manager-90502'>Technology and Digital Platforms Product Manager - EY Careers</a></h5> 
+<h5><a href='https://eygbl.referrals.selectminds.com/jobs/technology-and-digital-platforms-product-manager-90502'>Technology and Digital Platforms Product Manager - EY Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... Job Summary: The Technology and Digital Platforms Product Manager is 
 responsible for the overall management of one or more technology solutions for...</p>
@@ -322,7 +331,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Wizikey/743999692177688-product-manager'>Wizikey Product Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Wizikey/743999692177688-product-manager'>Wizikey Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Gurugram, Haryana</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
@@ -362,7 +371,7 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/innovid/jobs/4365184002'>Job Application for Senior Product Manager at Innovid</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/innovid/jobs/4365184002'>Job Application for Senior Product Manager at Innovid</a></h5> 
 <p><span class="badge badge-light">Tel-Aviv</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -411,11 +420,11 @@ Time. Submit your application. LinkedIn profile. Loading. Apply with Linkedin.</
 <p>Jul 14, 2019 ... Bridgemaker GmbH has a job opening for Product Owner (m/w/d) - uptodate in 
 Munich (published: 15.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
+<h5><a href='http://jobs.jobvite.com/farfetch/job/oVNBafwd'>Farfetch Careers - Product Designer - Store of The Future</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/farfetch/job/onrCafwk'>Farfetch Careers - Platform Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/farfetch/job/onrCafwk'>Farfetch Careers - Platform Product Manager</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -448,14 +457,6 @@ Munich (published: 15.07.2019). Apply now or check the other available jobs.</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/appcues-2/86357066-813b-4e84-aa32-c13f94dc7205'>Appcues - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Boston, MA</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/scout24/jobs/1788490'>Job Application for Product Designer - PropTech (m/f/d) at Scout24</a></h5> 
-<p><span class="badge badge-light">Munich</span></p>
-<p>Posted on: 2019-07-23</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/aifoundation/24255b6f-8ef4-4c1e-9969-9cd84a387670'>AI Foundation - Product Manager</a></h5> 
-<p><span class="badge badge-light">Las Vegas, Nevada</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
 
